# Quantum

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.3.0-pre1  LICENSE  Quantum.sublime-project  Quantum.sublime-workspace  README.md
Assets/: App Icon.icns
Design/: Color Palette.psd
Source Code/: CMakeLists.txt
Source Code/Game/: TestGame2D.cpp
Source Code/Game/Scenes/: TestScene.cpp  TestScene.h
Source Code/nbproject/: configurations.xml
Source Code/nbproject/private/: Default.properties  configurations.xml  private.xml
assets/images/: Ship.json  background.json  bonfire.json  stars-static.json  wood-crate.ase
assets/scripts/: collision.lua
design_/: App Icon.psd
src/: main.cpp
src/Game/: TestGame2D.cpp
src/Game/Scenes/: TestScene.cpp
src/game/: TestGame2D.cpp  TestGame2D.cpp~
src/game/scenes/: TestScene.cpp  TestScene.cpp~  TestScene.h
src/nbproject/: project.xml
src/nbproject/private/: configurations.xml  private.xml
